<resources>
    <string name="app_name">CIS298Assignment3</string>
    <string name="action_settings">Settings</string>


    <string name="wine_id_label">Id:</string>
    <string name="wine_description_label">Description:</string>
    <string name="wine_pack_size_label">Pack Size:</string>
    <string name="wine_case_price_label">Case Price:</string>
    <string name="wine_active_label">Active:</string>



</resources>
